plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'io.github.shk95'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation('net.dv8tion:JDA:5.0.0-beta.23') {
		/* without audio */
		exclude group: 'club.minnced', module: 'opus-java'
		exclude group: 'org.apache.commons', module: 'commons-collections4'
	}
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.4'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
	testRuntimeOnly 'com.h2database:h2'
	implementation 'org.apache.commons:commons-collections4:4.4'

}

tasks.named('test') {
	useJUnitPlatform()
}
